--- a/project.css
+++ b/project.css
@@ -1,4 +1,55 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+   background-color: rgba(255, 255, 255, 1);
+   color: rgba(43, 43, 43, 1);
+   font-family: 'Poppins', sans-serif;
+   font-size: 16px;
+}
+
+.navbar{
+    max-width: 347px;
+    max-height: 24px;
+    margin: 32px 40px 0 1024px;
+}
+
+.navbar ul {
+    list-style: none;
+    margin: 0;
+    display: flex;
+    padding: 0 20px;
+}
+
+.navbar ul li{
+    margin: 5px ;
+}
+
+.content {
+   max-width: 1300px;
+   max-height: 3542px;
+   margin: 200px 88px;
+   align-content: center;
+   text-align: center;
+   
+}
+
+.name {
+    width: 1300px;
+    height: 66.5px;
+}
+
+
+.top {
+    color: rgba(42, 42, 42, 1);
+    margin: 0 0 17px 0;
+}
+
+.img-fone{
+    max-width: 1122px;
 }
